# tutorial-flask

./: Dockerfile  compose.yaml  docker-compose.yml  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py
flaskr/static/: style.css
flaskr/templates/: base.html
tests/: data.sql  test_blog.py  test_db.py
