[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = ""
authors = ["Takayuki Sato <s.yukkiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
pytest = "^5.4.3"
coverage = "^5.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[tool.pytest]
testpaths = "tests"
[coverate.run]
branch = "True"
source = "flaskr"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

