[tool.poetry]
name = "flaskr"
version = "0.1.1"
description = ""
authors = ["Takayuki Sato <s.yukkiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
pytest = "^7.3.1"
coverage = "^7.2.5"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"

[tool.pytest]
testpaths = "tests"
[coverate.run]
branch = "True"
source = "flaskr"

[build-system]
requires = ["poetry>=1.4"]
build-backend = "poetry.masonry.api"

